--- a/skin/frontend/boilerplate/bugwelder3/less/bootstrap_navigation.less
+++ b/skin/frontend/boilerplate/bugwelder3/less/bootstrap_navigation.less
@@ -116,7 +116,7 @@
   .form-search {
     //position: relative;
     z-index:95;
-    width:220px;
+    width:245px;
     .transition(width 0.4s ease-in-out);
   }
   .navbar-nav {
@@ -126,10 +126,10 @@
   }
   &.search-focus {
     .form-search {
-      width: 400px;
+      width: 500px;
     }
     .navbar-nav {
-      position: absolute;
+      //position: absolute;
       opacity: 0;
     }
   }
